RESOLVED FIXED 245746
Scrolling with page granularity using keyboard smooth scrolling doesn't account for fixed content
https://bugs.webkit.org/show_bug.cgi?id=245746
Summary Scrolling with page granularity using keyboard smooth scrolling doesn't accou...
Richard Robinson
Reported 2022-09-27 11:52:07 PDT
Attachments
Richard Robinson
Comment 1 2022-09-27 12:04:01 PDT
EWS
Comment 2 2022-09-28 10:34:05 PDT
Committed 254963@main (fdd3720bd643): <https://commits.webkit.org/254963@main> Reviewed commits have been landed. Closing PR #4766 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.